--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -274,9 +274,14 @@
 	}
 	// .about-wedo__wrapper
 	&__wrapper {
-		display: flex;
-		align-items: flex-start;
-		gap: 10.2rem;
+		&.desktop {
+			display: flex;
+			align-items: flex-start;
+			gap: 10.2rem;
+		}
+		&.mobile {
+			display: none;
+		}
 	}
 	// .about-wedo__content
 	&__content {
@@ -596,103 +601,123 @@
 		&__inner {
 			display: flex;
 			align-items: flex-start;
+			flex-direction: column;
 			justify-content: space-between;
+			gap: 6.4rem;
 		}
 		// .about-wedo__subtitle
 		&__subtitle {
-			padding-top: 3.2rem;
+			padding-top: 0;
 		}
 		// .about-wedo__wrapper
 		&__wrapper {
-			display: flex;
-			align-items: flex-start;
-			gap: 10.2rem;
+			&.desktop {
+				display: none;
+			}
+			&.mobile {
+				display: block;
+			}
 		}
-		// .about-wedo__content
-		&__content {
-			padding-top: 3.2rem;
-			height: 84rem;
-			display: flex;
-			flex-direction: column;
-		}
-		// .about-wedo__list
-		&__list {
-			flex: 1;
-			display: flex;
-			flex-direction: column;
-			gap: 6rem;
+		&__accordion {
+			&-item {
+				display: flex;
+				flex-direction: column;
+				gap: 4.5rem;
+			}
+			&-button {
+				width: 100%;
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				&.active {
+					.about-wedo__accordion-button--content {
+						strong {
+							color: $brown;
+						}
+					}
+					.about-wedo__accordion-button--icon {
+						& .plus {
+							opacity: 0;
+							visibility: hidden;
+						}
+						& .minus {
+							opacity: 1;
+							visibility: visible;
+						}
+					}
 
-			li {
-				position: relative;
-				&:first-child {
-					strong {
-						color: $brown;
+					& ~ .about-wedo__accordion-content {
+						margin-bottom: 6.4rem;
 					}
 				}
-				strong {
-					display: block;
-					color: $black;
-					font-size: 4.8rem;
-					font-weight: 400;
-					line-height: normal;
-					text-transform: uppercase;
-				}
-				span {
-					color: rgba(114, 114, 114, 0.3);
-					font-size: 1.8rem;
-					font-weight: 300;
-					line-height: 140%; /* 25.2px */
-					text-transform: uppercase;
 
-					position: absolute;
-					top: -0.2rem;
-					left: -3rem;
-					z-index: 1;
+				& ~ .about-wedo__accordion-content {
+					margin-bottom: 0;
 				}
-			}
-		}
-		// .about-wedo__footer
-		&__footer {
-			display: flex;
-			flex-direction: column;
-			gap: 4rem;
-		}
-		// .about-wedo__text
-		&__text {
-			width: 57rem;
-			color: $black;
-			font-size: 1.8rem;
-			font-weight: 300;
-			line-height: 140%; /* 25.2px */
-			text-transform: uppercase;
-		}
-		// .about-wedo__btn
-		&__btn {
-			color: $brown;
+				&--content {
+					position: relative;
+					padding-left: 4rem;
+					span {
+						color: rgba(114, 114, 114, 0.3);
+						font-size: 3rem;
+						font-weight: 300;
+						line-height: 140%; /* 21px */
+						text-transform: uppercase;
 
-			span {
-				box-shadow: inset 0 0 0 0.3rem $brown;
-				&::after {
-					background: $brown;
+						position: absolute;
+						top: -1.5rem;
+						left: 0;
+					}
+					strong {
+						color: $black;
+						font-size: 4rem;
+						font-weight: 400;
+						line-height: 140%; /* 28px */
+						text-transform: uppercase;
+					}
+				}
+				&--icon {
+					position: relative;
+					width: 4.8rem;
+					height: 4.8rem;
+					& .plus {
+						position: absolute;
+					}
+					& .minus {
+						position: absolute;
+						opacity: 0;
+						visibility: hidden;
+					}
 				}
 			}
-		}
-		// .about-wedo__cards
-		&__cards {
-			width: 56.8rem;
-			height: 98rem;
-			position: relative;
-			overflow: hidden;
+			&-content {
+				transition: 1s ease-in-out;
+				max-height: 0;
+				overflow: hidden;
 
-			&-img {
-				will-change: transform;
+				display: flex;
+				flex-direction: column;
+				gap: 4.5rem;
+			}
+			&-image {
 				width: 100%;
-				height: 100%;
+				height: 40rem;
+			}
+			&-text {
+				color: $black;
+				font-size: 3rem;
+				font-weight: 300;
+				line-height: 140%; /* 21px */
+				text-transform: uppercase;
+			}
+			&-btn {
+				color: $brown;
 
-				&:not(:first-child) {
-					position: absolute;
-					top: 100%;
-					left: 0;
+				span {
+					box-shadow: inset 0 0 0 0.4rem $brown;
+					&::after {
+						background: $brown;
+					}
 				}
 			}
 		}
