--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -197,6 +197,14 @@ body {
 	}
 }
 
+.ymaps3x0--map-copyrights {
+	display: none !important;
+}
+
+.ymaps3x0--map {
+	filter: grayscale(1);
+}
+
 @media (max-width: 48em) {
 	@keyframes btnDots {
 		0% {
