--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -262,6 +262,7 @@
 	}
 }
 .about-wedo {
+	will-change: transform;
 	// .about-wedo__inner
 	&__inner {
 		display: flex;
@@ -286,7 +287,7 @@
 	// .about-wedo__content
 	&__content {
 		padding-top: 3.2rem;
-		height: 84rem;
+		height: 80rem;
 		display: flex;
 		flex-direction: column;
 	}
@@ -295,7 +296,7 @@
 		flex: 1;
 		display: flex;
 		flex-direction: column;
-		gap: 6rem;
+		gap: 5rem;
 
 		li {
 			position: relative;
