--- a/src/scss/pages/_main.scss
+++ b/src/scss/pages/_main.scss
@@ -549,6 +549,7 @@
 	}
 	// .main-projects__content-item
 	&__content-item {
+		width: 100%;
 		height: 49rem;
 		overflow: hidden;
 		position: relative;
@@ -602,6 +603,14 @@
 				background: $brown;
 			}
 		}
+	}
+	&__content-hidden {
+		transition: 1s ease-in-out;
+		display: flex;
+		flex-direction: column;
+		gap: 2rem;
+		max-height: 0;
+		overflow: hidden;
 	}
 	&__btn-wrapper {
 		width: 2rem;
