feat: service-detail

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@
 @import "./scss/pages/project-detail";
 @import "./scss/pages/404";
 @import "./scss/pages/about";
+@import "./scss/pages/service-detail";
 @import "./scss/style";
 
 .mobile {
