--- a/src/scss/pages/_service-detail.scss
+++ b/src/scss/pages/_service-detail.scss
@@ -311,6 +311,7 @@
 				}
 
 				strong {
+					width: 60rem;
 					text-wrap: nowrap;
 					overflow-wrap: break-word;
 					word-wrap: break-word;
