--- a/src/scss/pages/_service-detail.scss
+++ b/src/scss/pages/_service-detail.scss
@@ -291,14 +291,11 @@
 		// .services-banner__list
 		&__list {
 			padding: 0 3.2rem;
-			height: 10rem;
 			flex: 0;
-			overflow-x: scroll;
-			height: 10rem;
+			overflow: auto;
 			padding-top: 0;
 			display: flex;
 			flex-direction: row;
-			gap: 4rem;
 
 			li {
 				position: relative;
