--- a/src/scss/pages/_service-detail.scss
+++ b/src/scss/pages/_service-detail.scss
@@ -291,15 +291,14 @@
 		// .services-banner__list
 		&__list {
 			padding: 0 3.2rem;
-			gap: 0;
+			flex: 0;
 			overflow: auto;
 			padding-top: 0;
 			display: flex;
-			flex-wrap: nowrap;
 			flex-direction: row;
+			gap: 4rem;
 
 			li {
-				flex: 1 1 auto;
 				position: relative;
 				padding-left: 4rem;
 
@@ -310,7 +309,6 @@
 				}
 
 				strong {
-					max-width: 60rem;
 					text-wrap: nowrap;
 					display: block;
 					color: $black;
