--- a/src/scss/pages/_service-detail.scss
+++ b/src/scss/pages/_service-detail.scss
@@ -309,7 +309,7 @@
 				}
 
 				strong {
-					text-wrap: nowrap;
+					width: max-content;
 					display: block;
 					color: $black;
 					text-transform: uppercase;
