--- a/src/scss/pages/_service-detail.scss
+++ b/src/scss/pages/_service-detail.scss
@@ -290,10 +290,11 @@
 		}
 		// .services-banner__list
 		&__list {
-			padding: 0 3.2rem;
 			flex: 0;
 			overflow: auto;
 			padding-top: 0;
+			padding: 2rem 3.2rem;
+			margin: -2rem 0;
 			display: flex;
 			flex-direction: row;
 			gap: 4rem;
