--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -360,18 +360,26 @@
 	&__cards {
 		width: 56.8rem;
 		height: 100%;
-		position: relative;
 		overflow: hidden;
 
-		&-img {
-			will-change: transform;
-			width: 100%;
-			height: 100%;
+		&-wrapper {
+			display: flex;
+			flex-direction: column;
+			position: relative;
+		}
 
-			&:not(:first-child) {
+		&-img {
+			position: relative;
+			will-change: transform;
+			width: 56.8rem;
+			flex: none;
+			height: calc(100vh - 13rem);
+
+			img {
+				width: auto;
 				position: absolute;
-				top: 100%;
-				left: 0;
+				left: 50%;
+				transform: translateX(-50%);
 			}
 		}
 	}
