--- a/src/scss/pages/_main.scss
+++ b/src/scss/pages/_main.scss
@@ -566,6 +566,7 @@
 	}
 	// .main-projects__content-item
 	&__content-item {
+		display: block;
 		width: 100%;
 		height: 49rem;
 		overflow: hidden;
