--- a/src/scss/pages/_service-detail.scss
+++ b/src/scss/pages/_service-detail.scss
@@ -82,23 +82,24 @@
 	&__cards {
 		width: 63.2rem;
 		height: 69.2rem;
-		position: relative;
 		overflow: hidden;
+		&-wrapper {
+			display: flex;
+			flex-direction: column;
+			position: relative;
+		}
 		&-img {
+			position: relative;
 			will-change: transform;
-			width: 100%;
-			height: 100%;
+			width: 63.2rem;
+			flex: none;
+			height: 69.2rem;
 
-			&:not(:first-child) {
+			img {
 				position: absolute;
-				transition: 0.5s linear;
-				top: 100%;
-				left: 0;
-
-				&.active {
-					transition: 0.5s linear;
-					top: 0;
-				}
+				width: auto;
+				left: 50%;
+				transform: translateX(-50%);
 			}
 		}
 	}
@@ -205,6 +206,7 @@
 	}
 	// .services-cases__content-item
 	&__content-item {
+		display: block;
 		width: 100%;
 		height: 49rem;
 		overflow: hidden;
