--- a/src/components/header.html
+++ b/src/components/header.html
@@ -11,7 +11,7 @@
 				<a class="nav__link" href="#">contacts</a>
 				<a class="nav__link" href="#">service</a>
 			</nav>
-			<button class="header__btn" type="button">request a project</button>
+			<button class="header__btn" type="button" data-modal="request">request a project</button>
 			<button class="header__burger burger-btn">
 				<span></span>
 				<span></span>
