--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@
 @import "./scss/components/header";
 @import "./scss/components/footer";
 @import "./scss/components/form";
+@import "./scss/components/modal";
 
 @import "./scss/pages/main";
 @import "./scss/pages/project-detail";
