--- a/src/scss/pages/_service-detail.scss
+++ b/src/scss/pages/_service-detail.scss
@@ -203,6 +203,10 @@
 		flex-direction: column;
 		gap: 2rem;
 		will-change: transform;
+		.services-cases__content-item--text {
+			text-align: right;
+			right: 3.2rem;
+		}
 	}
 	// .services-cases__content-item
 	&__content-item {
@@ -231,16 +235,58 @@
 			height: 100%;
 			object-fit: cover;
 		}
+		&::after {
+			transition: opacity 0.4s linear;
+			opacity: 0;
+			content: "";
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			z-index: 2;
+			top: 0;
+			left: 0;
+			background: linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.3) 100%);
+		}
 		&:hover {
 			img {
 				transition: transform 0.5s ease-in-out;
 				transform: scale(1.1);
 			}
 
+			&::after {
+				transition: opacity 0.4s linear;
+				opacity: 1;
+			}
+
 			video ~ img {
 				transition: opacity 0.5s linear;
 				opacity: 0;
 				transform: none;
+			}
+
+			.services-cases__content-item--text {
+				transition: opacity 0.5s linear;
+				opacity: 1;
+			}
+		}
+		&--text {
+			transition: opacity 0.4s linear;
+			opacity: 0;
+			max-width: 80%;
+			height: auto;
+			position: absolute;
+			top: 50%;
+			z-index: 3;
+			transform: translateY(-50%);
+
+			span {
+				display: block;
+				color: #f8f8fa;
+				font-size: 4.8rem;
+				font-style: normal;
+				font-weight: 400;
+				line-height: normal;
+				text-transform: uppercase;
 			}
 		}
 	}
@@ -270,6 +316,11 @@
 		gap: 2rem;
 		margin-top: 20rem;
 		will-change: transform;
+
+		.services-cases__content-item--text {
+			text-align: left;
+			left: 3.2rem;
+		}
 	}
 }
 
