feat: modal submitted

--- a/src/components/request-modal.html
+++ b/src/components/request-modal.html
@@ -62,6 +62,12 @@
 				</div>
 			</form>
 		</div>
-		<div class="request-modal__content modal-content modal-content--second"></div>
+		<div class="request-modal__content modal-content modal-content--second">
+			<div class="request-modal__header">
+				<div class="request-modal__title-top h1">Your request</div>
+				<div class="request-modal__title-bottom h1">is submitted</div>
+			</div>
+			<button class="request-modal__btn btn hover">back <span></span></button>
+		</div>
 	</div>
 </div>
