--- a/src/scss/pages/_main.scss
+++ b/src/scss/pages/_main.scss
@@ -434,11 +434,11 @@
 		}
 		&-marks {
 			position: absolute;
-			top: 2.4rem;
-			left: 47.8rem;
+			top: 0;
+			left: 0;
 			z-index: 2;
-			width: 54.4rem;
-			height: 33.7rem;
+			width: 100%;
+			height: 100%;
 			&--item {
 				cursor: pointer;
 				width: 2.2rem;
@@ -446,48 +446,18 @@
 				position: absolute;
 				z-index: 1;
 
+				&.active {
+					.main-map__map-marks--wrapper {
+						transition: transform 0.4s ease-in-out;
+						transform: scale(2.5);
+						will-change: transform;
+					}
+				}
+			}
+			&--wrapper {
 				transform-origin: center bottom;
 				transition: transform 0.4s ease-in-out;
 				will-change: transform;
-
-				&.active {
-					transition: transform 0.4s ease-in-out;
-					transform: scale(2.5);
-					will-change: transform;
-				}
-
-				&:nth-child(1) {
-					top: 0;
-					left: 2.2rem;
-				}
-				&:nth-child(2) {
-					top: 5rem;
-					left: 0;
-				}
-				&:nth-child(3) {
-					top: 10.6rem;
-					left: 20.4rem;
-				}
-				&:nth-child(4) {
-					bottom: 0;
-					left: 15.6rem;
-				}
-				&:nth-child(5) {
-					bottom: 4.2rem;
-					left: 30.3rem;
-				}
-				&:nth-child(6) {
-					bottom: 3.8rem;
-					left: 35rem;
-				}
-				&:nth-child(7) {
-					right: 0;
-					top: 13.9rem;
-				}
-				&:nth-child(8) {
-					top: 5.3rem;
-					right: 3.3rem;
-				}
 			}
 		}
 		&-bg {
@@ -1033,10 +1003,12 @@
 		}
 		// .main-map__map
 		&__map {
+			margin-top: -10rem;
+			padding-top: 10rem;
 			position: absolute;
 			top: 0;
 			left: 0;
-			overflow-x: scroll;
+			overflow-x: auto;
 			z-index: 1;
 			scroll-behavior: smooth;
 
@@ -1064,41 +1036,9 @@
 					width: 5.6rem;
 					height: 5.8rem;
 					&.active {
-						transform: scale(2);
-					}
-
-					&:nth-child(1) {
-						top: 7rem;
-						left: 84rem;
-					}
-					&:nth-child(2) {
-						top: 16rem;
-						left: 78rem;
-					}
-					&:nth-child(3) {
-						top: 21.6rem;
-						left: 112rem;
-					}
-					&:nth-child(4) {
-						bottom: 52rem;
-						left: 107.2rem;
-					}
-					&:nth-child(5) {
-						bottom: 58.2rem;
-						left: 129.2rem;
-					}
-					&:nth-child(6) {
-						bottom: 58.4rem;
-						left: unset;
-						right: 84rem;
-					}
-					&:nth-child(7) {
-						right: 53rem;
-						top: 24.9rem;
-					}
-					&:nth-child(8) {
-						top: 12.3rem;
-						right: 62.3rem;
+						.main-map__map-marks--wrapper {
+							transform: scale(1.6);
+						}
 					}
 				}
 			}
