--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -141,7 +141,11 @@
 			width: 100%;
 			height: 100%;
 			border-radius: 50%;
-			background: linear-gradient(0deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.2) 100%),
+			background: linear-gradient(
+					0deg,
+					rgba(255, 255, 255, 0.2) 0%,
+					rgba(255, 255, 255, 0.2) 100%
+				),
 				linear-gradient(
 					107deg,
 					#b0913a -107.13%,
@@ -179,7 +183,14 @@
 			z-index: 3;
 
 			&--second {
-				clip-path: polygon(0% 50%, 50% 50%, 50% 0%, 100% 0%, 100% 100%, 0% 100%);
+				clip-path: polygon(
+					0% 50%,
+					50% 50%,
+					50% 0%,
+					100% 0%,
+					100% 100%,
+					0% 100%
+				);
 			}
 			&--third {
 				clip-path: polygon(50% 0, 50% 100%, 100% 100%, 100% 0);
@@ -255,9 +266,7 @@
 			height: 6.6rem;
 			border-radius: 50%;
 			background-color: $lightGray;
-			box-shadow:
-				0 0 0 3.1rem $bg,
-				0 0 0 6.7rem $lightGray;
+			box-shadow: 0 0 0 3.1rem $bg, 0 0 0 6.7rem $lightGray;
 		}
 	}
 }
@@ -602,9 +611,7 @@
 				height: 6.6rem;
 				border-radius: 50%;
 				background-color: $lightGray;
-				box-shadow:
-					0 0 0 3.1rem $bg,
-					0 0 0 6.7rem $lightGray;
+				box-shadow: 0 0 0 3.1rem $bg, 0 0 0 6.7rem $lightGray;
 			}
 		}
 	}
