--- a/src/scss/pages/_main.scss
+++ b/src/scss/pages/_main.scss
@@ -690,6 +690,10 @@
 		width: 78rem;
 		height: 34rem;
 		flex-shrink: 0;
+
+		.gm-style iframe + div {
+			border: none !important;
+		}
 	}
 	// .contacts-map__wrapper
 	&__wrapper {
